--- a/style.css
+++ b/style.css
@@ -894,3 +894,35 @@ footer h4 {
     bottom: 28px;
     
 }
+
+/* NEW TEST */
+
+.changeImg img {
+    border-radius: 30px;
+  }
+
+.changeImg img:active {
+    transform: scale(2.8);
+}
+.buttonSlider {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: rgba(255,255,255, 0.3);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin: 10px;
+}
+
+.gif {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+}
+
+.user {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
